--- a/views/viewSales.hbs
+++ b/views/viewSales.hbs
@@ -23,7 +23,7 @@
                 <td>{{total}}</td>
                 <td>{{f_factura}}</td>
                 <td>{{vendedor}}</td>
-                <td>{{pago}}</td>
+                <td>{{tipo_pago}}</td>
             </tr>
             {{/each}}
         </tbody>
