--- a/views/products.hbs
+++ b/views/products.hbs
@@ -10,7 +10,7 @@
                 <th>Stock</th>
                 <th>Costo</th>
                 <th>Precio de Venta</th>
-                <th>Fecha</th>
+                <th>Fecha de Creacion</th>
                 <th>Acciones</th>
             </tr>
         </thead>
