Correccion de caja

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,13 +7,20 @@
         <a href="/caja" class="btn btn-success">Ver Caja</a>
         <a href="/logout" class="btn btn-danger">Cerrar Sesion</a>
     </div>
+
     <div class="container text-center mt-5">
         <a href="/users" class="btn btn-success">Ver Usuarios</a>
         <a href="/register" class="btn btn-success">Registrar Usuario</a>
         <button id="abrir-caja-btn" class="btn btn-primary">Abrir Caja</button>
         <a href="/viewSales" class="btn btn-success">Ver Ventas</a>
     </div>
+
+    <div class="text-center mt-5">
     <a href="/sales" class="btn btn-success">Ventas</a>
+    <a href="/createCombo" class="btn btn-primary">Crear Combo</a>
+    <a href="/viewCombo" class="btn btn-danger">Editar Combos</a>
+    </div>
+    
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
