--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,7 +16,7 @@
     </div>
 
     <div class="text-center mt-5">
-    <a href="/sales" class="btn btn-success">Ventas</a>
+    <a href="/sales" class="btn btn-warning">Ventas</a>
     <a href="/createCombo" class="btn btn-primary">Crear Combo</a>
     <a href="/viewCombo" class="btn btn-danger">Editar Combos</a>
     </div>
