--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -124,134 +124,128 @@
 {{!-- ------------------------------------------------------------------------------ --}}
 <script>
     document.addEventListener('DOMContentLoaded', () => {
-        $(document).ready(function () {
-            function abrirModal() {
-                $.get('/sales/products', function (products) {
-                    $('#productList').empty();
-                    products.forEach(function (product) {
-                        let row = `
-                        <tr>
-                            <td>${product.cod_barra}</td>
-                            <td>${product.descripcion}</td>
-                            <td>${product.precio_venta}</td>
-                            <td>${product.stock}</td>
-                            <td>
-                                <button type="button" class="btn btn-primary seleccionar-producto" 
-                                    data-cod_barra="${product.cod_barra}" 
-                                    data-descripcion="${product.descripcion}" 
-                                    data-precio="${product.precio_venta}">
-                                    Seleccionar
-                                </button>
-                            </td>
-                        </tr>
-                    `;
-                        $('#productList').append(row);
-                    });
-                    $('#productModal').modal('show');
-                })
-                    .fail(function () {
-                        alert('Error al cargar los productos');
-                    });
-            }
+            $(document).ready(function () {
+                function abrirModal() {
+                    $.get('/sales/products', function (products) {
+                        $('#productList').empty();
+                        products.forEach(function (product) {
+                            let row = `
+                    <tr>
+                        <td>${product.cod_barra}</td>
+                        <td>${product.descripcion}</td>
+                        <td>${product.precio_venta}</td>
+                        <td>${product.stock}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary seleccionar-producto" 
+                                data-cod_barra="${product.cod_barra}" 
+                                data-descripcion="${product.descripcion}" 
+                                data-precio="${product.precio_venta}" 
+                                data-stock="${product.stock}">
+                                Seleccionar
+                            </button>
+                        </td>
+                    </tr>
+                `;
+                            $('#productList').append(row);
+                        });
+                        $('#productModal').modal('show');
+                    })
+                        .fail(function () {
+                            alert('Error al cargar los productos');
+                        });
+                }
 
-            $(document).on('click', '.seleccionar-producto', function () {
-                let cod_barra = $(this).data('cod_barra');
-                let descripcion = $(this).data('descripcion');
-                let precio = $(this).data('precio');
-                let cantidad = 1; // Puedes permitir que el usuario ingrese la cantidad si lo prefieres
-                let total = cantidad * precio;
+                $(document).on('click', '.seleccionar-producto', function () {
+                    let cod_barra = $(this).data('cod_barra');
+                    let descripcion = $(this).data('descripcion');
+                    let precio = $(this).data('precio');
+                    let stock = $(this).data('stock');
 
-                // Actualizar los campos ocultos con los detalles del producto seleccionado
-                $('#cantidad').val(cantidad);
-                $('#codigo').val(cod_barra);
-                $('#descripcion').val(descripcion);
-                $('#precio').val(precio);
-                $('#total').val(total);
-            });
+                    // Verificar si el producto tiene stock suficiente
+                    if (stock <= 0) {
+                        alert('El producto no tiene stock');
+                        return;
+                    }
 
-            $('#buscar-btn').click(function () {
-                abrirModal();
-            });
+                    let tbody = $('#productosEncontrados');
+                    let row = `
+            <tr data-cod_barra="${cod_barra}">
+                <td class="cantidad">1</td>
+                <td class="cod_barra">${cod_barra}</td>
+                <td class="descripcion">${descripcion}</td>
+                <td class="precio">${precio}</td>
+                <td class="total">${precio}</td>
+                <td><button type="button" onclick="editarCantidad('${cod_barra}')" class="btn btn-primary">Editar</button></td>
+                <td><button type="button" onclick="borrarArticulo(this)" class="btn btn-danger">Borrar</button></td>
+            </tr>
+        `;
+                    tbody.append(row);
+                    $('#productModal').modal('hide');
+                    actualizarTotal();
+                });
 
-            $(document).on('click', '.seleccionar-producto', function () {
-                let cod_barra = $(this).data('cod_barra');
-                let descripcion = $(this).data('descripcion');
-                let precio = $(this).data('precio');
-                let tbody = $('#productosEncontrados');
-                let row = `
-                <tr data-cod_barra="${cod_barra}">
-                    <td class="cantidad">1</td>
-                    <td class="cod_barra">${cod_barra}</td>
-                    <td class="descripcion">${descripcion}</td>
-                    <td class="precio">${precio}</td>
-                    <td class="total">${precio}</td>
-                    <td><button type="button" onclick="editarCantidad('${cod_barra}')" class="btn btn-primary">Editar</button></td>
-                    <td><button type="button" onclick="borrarArticulo(this)" class="btn btn-danger">Borrar</button></td>
-                </tr>
-            `;
-                tbody.append(row);
-                $('#productModal').modal('hide');
-                actualizarTotal();
-            });
+                $('#buscar-btn').click(function () {
+                    abrirModal();
+                });
 
-            window.editarCantidad = function (cod_barra) {
-                let cantidad = prompt('Ingrese la nueva cantidad:');
-                if (cantidad !== null && cantidad > 0) {
-                    let row = $(`tr[data-cod_barra='${cod_barra}']`);
-                    let precio = parseFloat(row.find('.precio').text());
-                    row.find('.cantidad').text(cantidad);
-                    row.find('.total').text(precio * cantidad);
+                window.editarCantidad = function (cod_barra) {
+                    let cantidad = prompt('Ingrese la nueva cantidad:');
+                    if (cantidad !== null && cantidad > 0) {
+                        let row = $(`tr[data-cod_barra='${cod_barra}']`);
+                        let precio = parseFloat(row.find('.precio').text());
+                        row.find('.cantidad').text(cantidad);
+                        row.find('.total').text(precio * cantidad);
+                        actualizarTotal();
+                    }
+                }
+
+                window.borrarArticulo = function (button) {
+                    let row = button.closest('tr');
+                    row.remove();
                     actualizarTotal();
                 }
-            }
 
-            window.borrarArticulo = function (button) {
-                let row = button.closest('tr');
-                row.remove();
-                actualizarTotal();
-            }
+                function actualizarTotal() {
+                    let totalCobrarElement = $('#totalCobrar');
+                    let total = 0;
+                    $('#productosEncontrados tr').each(function () {
+                        let cantidad = parseFloat($(this).find('.cantidad').text());
+                        let precio = parseFloat($(this).find('.precio').text());
+                        total += cantidad * precio;
+                    });
+                    totalCobrarElement.text(total.toFixed(2));
+                }
 
-            function actualizarTotal() {
-                let totalCobrarElement = $('#totalCobrar');
-                let total = 0;
-                $('#productosEncontrados tr').each(function () {
-                    let cantidad = parseFloat($(this).find('.cantidad').text());
-                    let precio = parseFloat($(this).find('.precio').text());
-                    total += cantidad * precio;
+                document.getElementById('confirmar-venta-btn').addEventListener('click', (event) => {
+                    event.preventDefault();
+
+                    const itemsContainer = document.getElementById('items-container');
+                    itemsContainer.innerHTML = '';
+                    const rows = document.querySelectorAll('#productosEncontrados tr');
+
+                    rows.forEach((row, index) => {
+                        const cod_barra = row.querySelector('.cod_barra') ? row.querySelector('.cod_barra').textContent : null;
+                        const descripcion = row.querySelector('.descripcion') ? row.querySelector('.descripcion').textContent : null;
+                        const cantidad = row.querySelector('.cantidad') ? row.querySelector('.cantidad').textContent : null;
+                        const precio = row.querySelector('.precio') ? row.querySelector('.precio').textContent : null;
+                        const total = row.querySelector('.total') ? row.querySelector('.total').textContent : null;
+
+                        if (cod_barra && descripcion && cantidad && precio && total) {
+                            itemsContainer.innerHTML += `
+                    <input type="hidden" name="items[${index}][cod_barra]" value="${cod_barra}">
+                    <input type="hidden" name="items[${index}][descripcion]" value="${descripcion}">
+                    <input type="hidden" name="items[${index}][cantidad]" value="${cantidad}">
+                    <input type="hidden" name="items[${index}][precio]" value="${precio}">
+                    <input type="hidden" name="items[${index}][total]" value="${total}">
+                `;
+                        }
+                    });
+
+                    document.getElementById('total').value = document.getElementById('totalCobrar').textContent;
+                    document.getElementById('sale-form').submit();
                 });
-                totalCobrarElement.text(total.toFixed(2));
-            }
-
-            document.getElementById('confirmar-venta-btn').addEventListener('click', (event) => {
-                event.preventDefault();
-
-                const itemsContainer = document.getElementById('items-container');
-                itemsContainer.innerHTML = '';
-                const rows = document.querySelectorAll('#productosEncontrados tr');
-
-                rows.forEach((row, index) => {
-                    const cod_barra = row.querySelector('.cod_barra') ? row.querySelector('.cod_barra').textContent : null;
-                    const descripcion = row.querySelector('.descripcion') ? row.querySelector('.descripcion').textContent : null;
-                    const cantidad = row.querySelector('.cantidad') ? row.querySelector('.cantidad').textContent : null;
-                    const precio = row.querySelector('.precio') ? row.querySelector('.precio').textContent : null;
-                    const total = row.querySelector('.total') ? row.querySelector('.total').textContent : null;
-
-                    if (cod_barra && descripcion && cantidad && precio && total) {
-                        itemsContainer.innerHTML += `
-                        <input type="hidden" name="items[${index}][cod_barra]" value="${cod_barra}">
-                        <input type="hidden" name="items[${index}][descripcion]" value="${descripcion}">
-                        <input type="hidden" name="items[${index}][cantidad]" value="${cantidad}">
-                        <input type="hidden" name="items[${index}][precio]" value="${precio}">
-                        <input type="hidden" name="items[${index}][total]" value="${total}">
-                    `;
-                    }
-                });
-
-                document.getElementById('total').value = document.getElementById('totalCobrar').textContent;
-                document.getElementById('sale-form').submit();
             });
         });
-    });
 </script>
 <script src="/js/confirmarVenta.js"></script>
 
