--- a/views/createCombo.hbs
+++ b/views/createCombo.hbs
@@ -3,41 +3,43 @@
 
 
 <div class="container">
-    <h1 class="mt-5">Crear Combo</h1>
+    <h1 class="mt-5 text-center">Crear Combo</h1>
 
-    <div id="items-section" class="mt-3 d-none">
+    <div class="mt-3">
+        <input type="text" id="nombre-combo" class="form-control custom-width-input" placeholder="INGRESE NOMBRE DEL COMBO" required>
+    </div>
+
+    <div id="items-section" class="mt-3 d-none text-center">
         <!-- Contenedor dinámico para productos -->
         <div id="productos-container"></div>
         <button type="button" id="agregar-producto-btn" class="btn btn-secondary mt-2">Agregar Producto</button>
     </div>
 
     <div id="precio-section" class="mt-3 d-none">
-        <div class="form-group row justify-content-end">
-            <div class="col-md-6">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-3 mb-2 mb-md-0">
                 <input type="number" id="precio-combo" class="form-control" placeholder="Precio del Combo">
             </div>
-            <div class="col-md-4">
-                <button type="button" id="agregar-precio-btn" class="btn btn-success ml-2">Agregar Precio</button>
+            <div class="col-md-3">
+                <button type="button" id="agregar-precio-btn" class="btn btn-success">Agregar Precio</button>
             </div>
         </div>
     </div>
 
-    <div class="fixed-bottom mb-3 ml-3">
+    <div class="mt-4 mb-3 text-center">
         <button id="cancelar-btn" class="btn btn-danger">Cancelar</button>
-        <button id="agregar-items-btn" class="btn btn-primary ml-2">Agregar Items</button>
+        <button id="agregar-items-btn" class="btn btn-primary ms-2">Agregar Items</button>
+        <button id="guardar-btn" class="btn btn-success ms-2">Guardar</button>
     </div>
 </div>
 
 <!-- Modal para seleccionar productos -->
-<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="productModalLabel">Seleccionar Producto</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <table class="table">
@@ -63,7 +65,8 @@
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.min.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -81,42 +84,41 @@
         // Añadir nuevo campo de producto
         $('#agregar-producto-btn').click(function () {
             const productoRow = `
-                    <div class="form-group row align-items-center mt-2">
-                        <div class="col-md-8">
-                            <input type="text" class="form-control producto-seleccionado" placeholder="Seleccione un producto" readonly>
-                        </div>
-                        <div class="col-md-4">
-                            <button type="button" class="btn btn-secondary seleccionar-producto-btn">Seleccionar Producto</button>
-                        </div>
+                <div class="form-group row align-items-center mt-2 offset-md-3">
+                    <div class="col-md-7">
+                        <input type="text" class="form-control producto-seleccionado" placeholder="Seleccione un producto" readonly>
                     </div>
-                `;
+                    <div class="col-md-4">
+                        <button type="button" class="btn btn-primary seleccionar-producto-btn">Seleccionar Producto</button>
+                    </div>
+                </div>
+            `;
             $('#productos-container').append(productoRow);
         });
 
         // Abrir el modal de selección de producto al hacer clic en el botón "Seleccionar Producto"
         $(document).on('click', '.seleccionar-producto-btn', function () {
             const productoInput = $(this).closest('.row').find('.producto-seleccionado');
-            const modalButton = $(this);
 
             $.get('/sales/products', function (products) {
                 $('#productList').empty();
                 products.forEach(function (product) {
                     let row = `
-                            <tr>
-                                <td>${product.cod_barra}</td>
-                                <td>${product.descripcion}</td>
-                                <td>${product.precio_venta}</td>
-                                <td>${product.stock}</td>
-                                <td>
-                                    <button type="button" class="btn btn-primary seleccionar-producto" 
-                                        data-cod_barra="${product.cod_barra}" 
-                                        data-descripcion="${product.descripcion}" 
-                                        data-precio="${product.precio_venta}">
-                                        Seleccionar
-                                    </button>
-                                </td>
-                            </tr>
-                        `;
+                        <tr>
+                            <td>${product.cod_barra}</td>
+                            <td>${product.descripcion}</td>
+                            <td>${product.precio_venta}</td>
+                            <td>${product.stock}</td>
+                            <td>
+                                <button type="button" class="btn btn-primary seleccionar-producto" 
+                                    data-cod_barra="${product.cod_barra}" 
+                                    data-descripcion="${product.descripcion}" 
+                                    data-precio="${product.precio_venta}">
+                                    Seleccionar
+                                </button>
+                            </td>
+                        </tr>
+                    `;
                     $('#productList').append(row);
                 });
                 $('#productModal').modal('show');
@@ -141,20 +143,12 @@
     });
 </script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<style>
+    .custom-width-input {
+        max-width: 300px;
+        /* Ajusta el valor según necesites */
+        margin-left: 500px;
+    }
+</style>
 
 {{>footer}}
