--- a/views/createCombo.hbs
+++ b/views/createCombo.hbs
@@ -6,22 +6,23 @@
     <h1 class="mt-5 text-center">Crear Combo</h1>
 
     <div class="mt-3">
-        <input type="text" id="nombre-combo" class="form-control custom-width-input" placeholder="INGRESE NOMBRE DEL COMBO" required>
+        <input type="text" id="nombre-combo" class="form-control mx-auto" style="max-width: 300px;"
+            placeholder="INGRESE NOMBRE DEL COMBO" required>
     </div>
 
-    <div id="items-section" class="mt-3 d-none text-center">
+    <div id="items-section" class="mt-3 text-center">
         <!-- Contenedor dinámico para productos -->
         <div id="productos-container"></div>
         <button type="button" id="agregar-producto-btn" class="btn btn-secondary mt-2">Agregar Producto</button>
     </div>
 
-    <div id="precio-section" class="mt-3 d-none">
-        <div class="row justify-content-center align-items-center">
-            <div class="col-md-3 mb-2 mb-md-0">
-                <input type="number" id="precio-combo" class="form-control" placeholder="Precio del Combo">
+    <div id="precio-section" class="mt-3 text-center">
+        <div class="row justify-content-center">
+            <div class="col-md-4 mb-2">
+                <input type="text" id="codigo-barra-combo" class="form-control" placeholder="Código de Barra combo" required>
             </div>
-            <div class="col-md-3">
-                <button type="button" id="agregar-precio-btn" class="btn btn-success">Agregar Precio</button>
+            <div class="col-md-4">
+                <input type="number" id="precio-combo" class="form-control" placeholder="Precio del Combo" required>
             </div>
         </div>
     </div>
@@ -61,9 +62,6 @@
     </div>
 </div>
 
-
-
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.min.js"></script>
@@ -84,12 +82,15 @@
         // Añadir nuevo campo de producto
         $('#agregar-producto-btn').click(function () {
             const productoRow = `
-                <div class="form-group row align-items-center mt-2 offset-md-3">
-                    <div class="col-md-7">
-                        <input type="text" class="form-control producto-seleccionado" placeholder="Seleccione un producto" readonly>
+                <div class="row justify-content-center align-items-center mt-2 producto-row">
+                    <div class="col-md-2">
+                        <input type="text" class="form-control mb-2 cod_barra" placeholder="Código de barras" readonly>
                     </div>
-                    <div class="col-md-4">
-                        <button type="button" class="btn btn-primary seleccionar-producto-btn">Seleccionar Producto</button>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control mb-2 producto-seleccionado" placeholder="Seleccione un producto" readonly>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary seleccionar-producto-btn mb-2 w-100">Seleccionar Producto</button>
                     </div>
                 </div>
             `;
@@ -98,8 +99,8 @@
 
         // Abrir el modal de selección de producto al hacer clic en el botón "Seleccionar Producto"
         $(document).on('click', '.seleccionar-producto-btn', function () {
-            const productoInput = $(this).closest('.row').find('.producto-seleccionado');
-
+            const productoInput = $(this).closest('.producto-row');
+            $('#productModal').data('productoInput', productoInput);
             $.get('/sales/products', function (products) {
                 $('#productList').empty();
                 products.forEach(function (product) {
@@ -122,25 +123,69 @@
                     $('#productList').append(row);
                 });
                 $('#productModal').modal('show');
-
-                // Seleccionar un producto del modal
-                $(document).off('click', '.seleccionar-producto').on('click', '.seleccionar-producto', function () {
-                    let descripcion = $(this).data('descripcion');
-                    productoInput.val(descripcion);
-                    $('#productModal').modal('hide');
-                });
             }).fail(function () {
                 alert('Error al cargar los productos');
             });
         });
 
-        // Añadir precio al combo
-        $('#agregar-precio-btn').click(function () {
-            const precioCombo = $('#precio-combo').val();
-            // Aquí puedes realizar la lógica para agregar el precio al combo
-            alert('Precio del Combo: ' + precioCombo);
+        // Seleccionar un producto del modal
+        $(document).on('click', '.seleccionar-producto', function () {
+            const productoRow = $('#productModal').data('productoInput');
+            let codigoBarraProducto = $(this).data('cod_barra');
+            let descripcionProducto = $(this).data('descripcion');
+
+            // Asignar la descripción del producto seleccionado al input correspondiente
+            productoRow.find('.producto-seleccionado').val(descripcionProducto);
+            // Asignar el código de barras del producto seleccionado al input correspondiente
+            productoRow.find('.cod_barra').val(codigoBarraProducto);
+
+            $('#productModal').modal('hide');
         });
-    });
+
+        // Transformar los productos a un formato correcto antes de enviar la solicitud
+        $('#guardar-btn').click(function () {
+            const nombreCombo = $('#nombre-combo').val();
+            const codigoBarraCombo = $('#codigo-barra-combo').val();
+            const precioCombo = $('#precio-combo').val();
+            const productos = [];
+
+            $('.producto-seleccionado').each(function () {
+                if ($(this).val() !== '') {
+                    productos.push({
+                        descripcion: $(this).val(),
+                        codigoBarra: Number($(this).closest('.row').find('.cod_barra').val()) // Convertir a número
+                    });
+                }
+            });
+
+            if (!nombreCombo || !codigoBarraCombo || !precioCombo || productos.length === 0) {
+                alert('Por favor complete todos los campos.');
+                return;
+            }
+
+            const comboData = {
+                nombre: nombreCombo,
+                codigoBarra: codigoBarraCombo,
+                precio: precioCombo,
+                productos: productos
+            };
+
+            $.ajax({
+                type: 'POST',
+                url: '/combos',
+                data: JSON.stringify(comboData),
+                contentType: 'application/json',
+                success: function (response) {
+                    alert('Combo guardado exitosamente');
+                    window.location.href = '/home';
+                },
+                error: function (error) {
+                    alert('Error al guardar el combo');
+                    console.error(error);
+                }
+            });
+        });
+    })
 </script>
 
 <style>
