--- a/views/createCombo.hbs
+++ b/views/createCombo.hbs
@@ -1,7 +1,5 @@
 {{>header}}
 
-
-
 <div class="container">
     <h1 class="mt-5 text-center">Crear Combo</h1>
 
@@ -10,16 +8,17 @@
             placeholder="INGRESE NOMBRE DEL COMBO" required>
     </div>
 
-    <div id="items-section" class="mt-3 text-center">
+    <div id="items-section" class="mt-3 text-center d-none">
         <!-- Contenedor dinámico para productos -->
         <div id="productos-container"></div>
         <button type="button" id="agregar-producto-btn" class="btn btn-secondary mt-2">Agregar Producto</button>
     </div>
 
-    <div id="precio-section" class="mt-3 text-center">
+    <div id="precio-section" class="mt-3 text-center d-none">
         <div class="row justify-content-center">
             <div class="col-md-4 mb-2">
-                <input type="text" id="codigo-barra-combo" class="form-control" placeholder="Código de Barra combo" required>
+                <input type="text" id="codigo-barra-combo" class="form-control" placeholder="Código de Barra combo"
+                    required>
             </div>
             <div class="col-md-4">
                 <input type="number" id="precio-combo" class="form-control" placeholder="Precio del Combo" required>
@@ -60,6 +59,11 @@
             </div>
         </div>
     </div>
+</div>
+
+<!-- Contenedor para mostrar los combos existentes -->
+<div id="combos-container" class="container mt-5">
+    <!-- Aquí se mostrarán los combos y sus productos -->
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -185,13 +189,14 @@
                 }
             });
         });
-    })
+
+        
+    });
 </script>
 
 <style>
     .custom-width-input {
         max-width: 300px;
-        /* Ajusta el valor según necesites */
         margin-left: 500px;
     }
 </style>
